Fix compilation issue with JDK8